truly fix track part direction, introduce Orientation